--- a/pom.xml
+++ b/pom.xml
@@ -30,32 +30,39 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
+        
+        <!-- Jackson Java to JSON and back -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.3</version>
+        </dependency>
 
         
-        <!-- Hibernate -->
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.2.8.Final</version>
-        </dependency>
+            <!-- Hibernate -->
+            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>5.2.8.Final</version>
+            </dependency>
 
-        <!-- This helps with manually parsing the JSON data from archive.org -->
-        <!-- https://mvnrepository.com/artifact/org.apache.clerezza.ext/org.json.simple -->
-        <dependency>
-            <groupId>org.apache.clerezza.ext</groupId>
-            <artifactId>org.json.simple</artifactId>
-            <version>0.4</version>
-        </dependency>
+            <!-- This helps with manually parsing the JSON data from archive.org -->
+            <!-- https://mvnrepository.com/artifact/org.apache.clerezza.ext/org.json.simple -->
+            <dependency>
+                <groupId>org.apache.clerezza.ext</groupId>
+                <artifactId>org.json.simple</artifactId>
+                <version>0.4</version>
+            </dependency>
 
-        <!-- JUnit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>                
+            <!-- JUnit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>                
     </dependencies>
 
     <build>
@@ -107,5 +114,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
